--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -12,8 +12,8 @@
     "about": "ABOUT COMPANY",
     "faq": "FAQ",
     "contacts": "CONTACTS",
-    "address": "Kharkiv, Nauky Ave. 22-A",
-    "phone": "+38 (050) 604 23 22"
+    "address": "Zaporizhzhia, 68A Nezalezhnoyi Ukrayiny str., room 26",
+    "phone": "+38 (098) 603 25 92"
   },
   "main": {
     "hero": {
