--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -12,8 +12,8 @@
     "about": "ПРО КОМПАНІЮ",
     "faq": "ПИТАННЯ ВІДПОВІДІ",
     "contacts": "КОНТАКТИ",
-    "address": "м. Харків, пр. Науки (Леніна) 22-А",
-    "phone": "+38 (050) 604 23 22"
+    "address": "м. Запоріжжя, вул. Незалежної України 68А, прим. 26",
+    "phone": "+38 (098) 603 25 92"
   },
   "main": {
     "hero": {
