--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -8,12 +8,14 @@
   },
   "footer": {
     "about_company": "ПРО КОМПАНІЮ",
+    "information": "ІНФОРМАЦІЯ",
     "gallery": "ГАЛЕРЕЯ",
     "about": "ПРО КОМПАНІЮ",
     "faq": "ПИТАННЯ ВІДПОВІДІ",
     "contacts": "КОНТАКТИ",
     "address": "м. Запоріжжя, вул. Незалежної України 68А, прим. 26",
-    "phone": "+38 (098) 603 25 92"
+    "phone": "+38 (098) 603 25 92",
+    "workingHours": "Графік роботи: Пн-Пт з 9:00 до 18:00"
   },
   "main": {
     "hero": {
