--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -2,14 +2,18 @@
   "header": {
     "home": "Головна",
     "about": "Про нас",
-    "gallery": "Галерея",
+    "gallery": "Проекти",
     "contacts": "Контакти",
-    "faq": "Питання-відповіді"
+    "faq": "Питання-відповіді",
+    "construction": "Будівництво",
+    "manufacturing": "Виробництво",
+    "design": "Проектування",
+    "trade": "Торгівля"
   },
   "footer": {
     "about_company": "ПРО КОМПАНІЮ",
     "information": "ІНФОРМАЦІЯ",
-    "gallery": "ГАЛЕРЕЯ",
+    "gallery": "ПРОЕКТИ",
     "about": "ПРО КОМПАНІЮ",
     "faq": "ПИТАННЯ ВІДПОВІДІ",
     "contacts": "КОНТАКТИ",
