Add navigation feature to main activity blocks

--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -43,7 +43,7 @@
           "description": "Розробка концепцій будівель та споруд з урахуванням вимог безпеки та державних стандартів. Повний цикл проектування — від ідеї до реалізації."
         },
         "trade": {
-          "title": "Торгівля",
+          "title": "Трейдинг",
           "description": "Комплексне забезпечення, участь у публічних закупівлях, виконання контрактів з державними та приватними замовниками. Швидка доставка та оптимізація логістики для мінімізації витрат і часу."
         }
       }
