Add statuses to construction blocks

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -371,5 +371,9 @@
     "subtitle": "Explore our most recent construction and reconstruction work",
     "viewDetails": "View Details",
     "viewAll": "View All Projects"
+  },
+  "construction": {
+    "statusCompleted": "Construction is completed",
+    "statusInProgress": "Construction is ongoing"
   }
 }
