--- a/locales/uk/translation.json
+++ b/locales/uk/translation.json
@@ -370,5 +370,9 @@
     "subtitle": "Ознайомтеся з нашими найсвіжішими роботами у сфері будівництва та реконструкції",
     "viewDetails": "Детальніше",
     "viewAll": "Переглянути всі проекти"
+  },
+  "construction": {
+    "statusCompleted": "Будівництво завершено",
+    "statusInProgress": "Будівництво триває"
   }
 }
