--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -374,5 +374,10 @@
   "construction": {
     "statusCompleted": "Будівництво завершено",
     "statusInProgress": "Будівництво триває"
+  },
+  "design": {
+    "implementation": "Реалізовується",
+    "realized": "Реалізовано",
+    "notImplemented": "Не реалізовано"
   }
 }
