--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -310,10 +310,13 @@
     "viewAll": "Переглянути всі проекти"
   },
   "construction": {
+    "title": "Наші проекти",
     "statusCompleted": "Будівництво завершено",
     "statusInProgress": "Будівництво триває"
   },
   "design": {
+    "title": "Наші проекти дизайну",
+    "description": "Ми створюємо функціональні та естетичні дизайнерські рішення для різних типів об'єктів. Наша команда дизайнерів працює над створенням сучасних просторів, які задовольняють потреби клієнтів.",
     "implementation": "Реалізовується",
     "realized": "Реалізовано",
     "notImplemented": "Не реалізовано"
@@ -326,6 +329,25 @@
     "photoAlt": "Фото проекту",
     "prevPhoto": "Попереднє фото",
     "nextPhoto": "Наступне фото",
-    "goToPhoto": "Перейти до фото"
+    "goToPhoto": "Перейти до фото",
+    "projectNotFound": "Проект не знайдено",
+    "projectNotFoundDesc": "На жаль, запитуваний проект не існує.",
+    "backToGallery": "Повернутися до галереї",
+    "backToLastPage": "Назад",
+    "projectPhotos": "Фотогалерея проекту",
+    "otherProjects": "Інші проекти"
+  },
+  "notFound": {
+    "notFoundPage": {
+      "title": "Сторінку не знайдено",
+      "description": "На жаль, запитувальної сторінки не існує.",
+      "backText": "Повернутися назад",
+      "backToMain": "На головну",
+      "tryAgain": "Спробувати ще раз",
+      "interests": "Можливо, вас зацікавить:",
+      "constrProj": "Наші проекти будівництва",
+      "designSolution": "Дизайнерські рішення",
+      "aboutCompany": "Про нашу компанію"
+    }
   }
 }
